# Stego_CPP_Group

./: CMakeLists.txt  README.md  environment.yml
Audio_encrypt/data/: filetobehidden.txt
Audio_encrypt/include/: Steganography.h
Image_encrypt/include/: decoder.h  encoder.h  operations.h  vigenere.h
Image_encrypt/src/: CMakeLists.txt  encoder.cpp  main.cpp
Image_encrypt/test/: test_image.cpp
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst  modules.rst
include/: Steganography.h  decode.h  decoder.h  decoder_PNG.h  encode.h  encoder.h  encoder_PNG.h  file_utils.h  operations_PNG.h  vigenere.h  vigenere_WAV.h
libs/: CMakeLists.txt
scripts/: script.sh
src/: CMakeLists.txt  Decoder.cpp  Decoder_WAV.cpp  Encoder.cpp  Encoder_WAV.cpp  decode.cpp  decoder.cpp  decoder_PNG.cpp  encode.cpp  encoder.cpp  encoder_PNG.cpp  file_utils.cpp  file_utls.cpp  main.cpp  operations.cpp  operations_PNG.cpp  vigenere.cpp  vigenere_PNG.cpp  vigenere_WAV.cpp
test/: CMakeLists.txt  test_image.cpp
text/: message.txt
